// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shows stats when files are added 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
1 → 2 | 122.29 kB → 140.66 kB (+18.37 kB) | +15.02%"
`;

exports[`Shows stats when files are added 2`] = `
"**Added**

Asset | File Size | % Changed
----- | --------- | ---------
static/js/resize-observer-6FaCDon1.js | 0 B → 18.37 kB (+18.37 kB) | -

**Removed**

No assets were removed

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
static/js/BackgroundImage-hmXOL_KY.js | 122.29 kB | 0%"
`;

exports[`Shows stats when files are removed 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 → 1 | 140.66 kB → 122.29 kB (-18.37 kB) | -13.06%"
`;

exports[`Shows stats when files are removed 2`] = `
"**Added**

No assets were added

**Removed**

Asset | File Size | % Changed
----- | --------- | ---------
static/js/resize-observer-6FaCDon1.js | 18.37 kB → 0 B (-18.37 kB) | -100%

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
static/js/BackgroundImage-hmXOL_KY.js | 122.29 kB | 0%"
`;

exports[`Shows stats when files are unchanged 1`] = `
"**Total**

Files count | Total bundle size | % Changed
----------- | ----------------- | ---------
2 | 140.66 kB | 0%"
`;

exports[`Shows stats when files are unchanged 2`] = `
"**Added**

No assets were added

**Removed**

No assets were removed

**Bigger**

No assets were bigger

**Smaller**

No assets were smaller

**Unchanged**

Asset | File Size | % Changed
----- | --------- | ---------
static/js/resize-observer-6FaCDon1.js | 18.37 kB | 0%
static/js/BackgroundImage-hmXOL_KY.js | 122.29 kB | 0%"
`;

exports[`displays module information when files are added/removed/changed 1`] = `
"
<details>
<summary>Changeset</summary>

File | Δ | Size
---- | - | ----
\`node_modules/actions/src/client/this-file-was-added.ts\` | 🆕 +1.46 kB | 0 B → 1.46 kB
\`node_modules/actions/src/client/this-file-grew-larger.tsx\` | 📈 +200 B (+35.59%) | 562 B → 762 B
\`node_modules/actions/src/client/helpers/this-file-grew-smaller.ts\` | 📉 -200 B (-7.94%) | 2.46 kB → 2.26 kB
\`node_modules/actions/src/client/this-file-will-be-deleted.ts\` | 🔥 -1.46 kB (-100%) | 1.46 kB → 0 B

</details>
"
`;

exports[`displays no module information when unchanged 1`] = `
"
Changeset

No files were changed"
`;
